# AgentForge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
.omo/run-continuation/: ses_08a416541ffeCAUQglbZYdb3Kx.json
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md
docs/adr/: 0001-postgres-citus-primary-store.md  0002-temporal-workflow.md  0003-kafka-event-bus.md  0004-litellm-model-gateway.md  0005-qdrant-vector-store.md  0006-opa-policy-engine.md  0007-clickhouse-analytics.md  0008-keycloak-identity.md  0009-langgraph-agents.md  0010-redis-caching.md  0011-hybrid-tenant-isolation.md  0012-event-driven-cqrs.md
docs/architecture/: 01-high-level-architecture.md  02-core-platform-subsystems.md  03-memory-knowledge-rag.md  04-tool-integration-layer.md  05-intelligence-layer.md  06-governance-security.md  07-observability-evaluation.md  08-developer-experience.md  09-database-event-architecture.md  10-operational-excellence.md
examples/: order_agent.py  rag_agent.py
infra/docker/: control-plane.Dockerfile  sdk.Dockerfile
infra/helm/agentforge/: Chart.yaml  values.yaml
infra/helm/agentforge/templates/: deployment.yaml
scripts/: smoke_phase3.py  smoke_sdk.py
sdk/: pyproject.toml
sdk/_legacy_flat_backup/: __init__.py  agent.py  exceptions.py  logging.py  prompts.py  registry.py  tool.py
sdk/agentforge/: pyproject.toml
sdk/agentforge/agentforge/: __init__.py  agent.py  errors.py  guardrail.py  interfaces.py  prompt.py  tool.py  types.py  version.py
sdk/agentforge/agentforge/cli/: main.py
sdk/agentforge/agentforge/eval/: __init__.py  suite.py
sdk/agentforge/agentforge/governance/: __init__.py  audit.py  policies.py
sdk/agentforge/agentforge/knowledge/: __init__.py  base.py  rag.py
sdk/agentforge/agentforge/memory/: __init__.py  in_memory.py
sdk/agentforge/agentforge/models/: __init__.py  config.py  embeddings.py  gateway.py  llm.py
sdk/agentforge/agentforge/observability/: __init__.py  local.py
sdk/agentforge/agentforge/runtime/: __init__.py  context.py  execution.py
sdk/agentforge/agentforge/testing/: __init__.py  harness.py
sdk/agentforge/cli/: main.py
sdk/agentforge/eval/: __init__.py
sdk/agentforge/gateway/: __init__.py  providers.py
sdk/agentforge/governance/: __init__.py
sdk/agentforge/guardrails/: __init__.py
sdk/agentforge/manifests/: __init__.py
sdk/agentforge/memory/: __init__.py
sdk/agentforge/models/: __init__.py
sdk/agentforge/observability/: __init__.py  tracer.py
sdk/agentforge/orchestration/: __init__.py  scheduler.py  workflow.py
sdk/agentforge/runtime/: __init__.py  backend.py  engine.py  local.py
sdk/agentforge/testing/: __init__.py
sdk/agentforge/tests/: test_agent_runtime.py  test_guardrail.py  test_memory_rag.py  test_tool.py
sdk/agentforge/tools/: __init__.py
services/control_plane/: README.md  app.py  pyproject.toml  registry.py
services/control_plane/tests/: test_registry.py
services/observability/: README.md  app.py  pyproject.toml  store.py
services/observability/tests/: test_store.py
