[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.1.0"
description = "Enterprise Agent Platform for Building, Governing and Operating AI Agents at Scale"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentForge Team", email = "team@agentforge.dev" }]
keywords = ["agents", "llm", "genai", "agentic", "rag", "mcp", "ai-platform", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "jsonschema>=4.21,<5.0",
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0",
    "prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
rag = ["numpy>=1.26,<3.0"]
mcp = ["mcp>=1.0,<2.0"]
observability = ["opentelemetry-exporter-otlp>=1.25,<2.0"]
cli = ["click>=8.1,<9.0", "rich>=13.7,<14.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10", "black>=24.0"]
all = ["numpy>=1.26,<3.0", "mcp>=1.0,<2.0", "opentelemetry-exporter-otlp>=1.25,<2.0", "rich>=13.7,<14.0", "typer>=0.12,<1.0"]

[project.scripts]
agentforge = "agentforge.cli.main:main"

[project.urls]
Homepage = "https://agentforge.dev"
Documentation = "https://agentforge.dev/docs"
Repository = "https://github.com/sam1064max/AgentForge"
Issues = "https://github.com/sam1064max/AgentForge/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["sdk", "libs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["B008", "RUF009"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "F401"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["build", "dist", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
