# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge-control-plane"
version = "0.1.0"
description = "AgentForge control plane: agent registry and deployment lifecycle API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Sushant Shambharkar" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["services/control_plane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
